# xwaxdb

./: .gitignore  Makefile.am  README.md  configure.ac  gmbrc.pls.lst  libtool
libquasd/: file.cpp  file.h  gmbrctool.cpp  gmbrctool.h  m3utool.cpp  m3utool.h  settingsfile.cpp  settingsfile.h  tagtool.cpp  tagtool.h
scripts/: gatsxwax-import  reset.sh  xwax_launch.sh  xwax_libscanner.sh
src/: crate.cpp  crate.h  crate_audiofiles.cpp  crate_audiofiles.h  crate_gmbrc.cpp  crate_gmbrc.h  crate_pls.cpp  crate_pls.h  db_crates.cpp  db_crates.h  global.h  settings.cpp  settings.h  uicrates.cpp  uicrates.h  uigmbrc.cpp  uigmbrc.h  uimainwindow.cpp  uimainwindow.h  uiprogressdialog.cpp  uiprogressdialog.h  uisettingsdialog.cpp  uisettingsdialog.h  uisettingsdialog.ui  xwaxdb.cpp
